--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,9 @@
-config/smug/.config/smug/gnp.yml filter=git-crypt diff=git-crypt
-config/smug/.config/smug/hbi.yml filter=git-crypt diff=git-crypt
-config/smug/.config/smug/hbl.yml filter=git-crypt diff=git-crypt
-config/smug/.config/smug/hlg.yml filter=git-crypt diff=git-crypt
-config/smug/.config/smug/hmd.yml filter=git-crypt diff=git-crypt
-config/smug/.config/smug/hnn.yml filter=git-crypt diff=git-crypt
+configs/smug/.config/smug/gnp.yml filter=git-crypt diff=git-crypt
+configs/smug/.config/smug/hbi.yml filter=git-crypt diff=git-crypt
+configs/smug/.config/smug/hbl.yml filter=git-crypt diff=git-crypt
+configs/smug/.config/smug/hlg.yml filter=git-crypt diff=git-crypt
+configs/smug/.config/smug/hmd.yml filter=git-crypt diff=git-crypt
+configs/smug/.config/smug/hnn.yml filter=git-crypt diff=git-crypt
 
-config/pipe-viewer/.config/pipe-viewer/subscribed_channels.txt filter=git-crypt diff=git-crypt
-config/pipe-viewer/.config/pipe-viewer/watched.txt filter=git-crypt diff=git-crypt
+configs/pipe-viewer/.config/pipe-viewer/subscribed_channels.txt filter=git-crypt diff=git-crypt
+configs/pipe-viewer/.config/pipe-viewer/watched.txt filter=git-crypt diff=git-crypt
