--- a/configs/hypr/.config/hypr/hyprland.conf
+++ b/configs/hypr/.config/hypr/hyprland.conf
@@ -68,7 +68,7 @@ decoration {
     inactive_opacity = 0.90
 
     shadow {
-        enabled = true
+        enabled = false
         range = 15
         render_power = 2
         color = rgb(181926)
