tmux: shortcut do disable tmux keybinds

--- a/configs/tmux/.config/tmux/tmux.conf
+++ b/configs/tmux/.config/tmux/tmux.conf
@@ -29,6 +29,22 @@ set -sg terminal-overrides ",*:RGB"
 
 set -g mode-keys vi
 
+# Toggle keybinds on/off with prefix + C-\\
+bind C-\\ \
+  set prefix None \;\
+  set key-table off \;\
+  set status-style "bg=colour240,fg=colour255" \;\
+  if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
+  refresh-client -S \;\
+  display-message "tmux keybinds OFF"
+
+bind -T off C-\\ \
+  set -u prefix \;\
+  set -u key-table \;\
+  set -u status-style \;\
+  refresh-client -S \;\
+  display-message "tmux keybinds ON"
+
 set -g @tmux2k-theme 'catppuccin'
 set -g @tmux2k-icons-only true
 set -g @tmux2k-show-powerline false
