--- a/configs/waybar/.config/waybar/config
+++ b/configs/waybar/.config/waybar/config
@@ -6,7 +6,8 @@
     "fixed-center": true,
     "margin": 3,
     "modules-left": [
-        "hyprland/workspaces"
+        "hyprland/workspaces",
+        "hyprland/window"
     ],
     "modules-center": [
         "custom/timew",
@@ -73,6 +74,10 @@
             "class<obsidian>": " "
 
         }
+    },
+    "hyprland/window": {
+        "format": "{title}",
+        "max-length": 30
     },
     "custom/timew": {
         "exec": "~/.config/waybar/timew.py",
