hyprland: migrate to new rule syntax in 0.53

--- a/configs/hypr/.config/hypr/hyprland.conf
+++ b/configs/hypr/.config/hypr/hyprland.conf
@@ -256,28 +256,71 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # WINDOW RULES {{{1
 # Ignore maximize requests from apps
-windowrule = suppressevent maximize, class:.*
+windowrule {
+  name = windowrule-1
+  suppress_event = maximize
+  match:class = .*
+}
+
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+  name = windowrule-2
+  no_focus = on
+  match:class = ^$
+  match:title = ^$
+  match:xwayland = 1
+  match:float = 1
+  match:fullscreen = 0
+  match:pin = 0
+}
+
 
 # Ncmpcpp
-windowrulev2 = float, class:^(foot)$, title:^(Ncmpcpp)$
-windowrulev2 = size 640 480, class:^(foot)$, title:^(Ncmpcpp)$
+windowrule {
+  name = windowrule-3
+  float = on
+  size = 640 480
+  match:class = ^(foot)$
+  match:title = ^(Ncmpcpp)$
+}
+
 
 # Calcurse
-windowrulev2 = float, class:^(foot)$, title:^(Calcurse)$
-windowrulev2 = size 800 600, class:^(foot)$, title:^(Calcurse)$
+windowrule {
+  name = windowrule-4
+  float = on
+  size = 800 600
+  match:class = ^(foot)$
+  match:title = ^(Calcurse)$
+}
+
 
 # btop
-windowrulev2 = float, class:^(foot)$, title:^(btop)$
-windowrulev2 = size 1200 800, class:^(foot)$, title:^(btop)$
+windowrule {
+  name = windowrule-5
+  float = on
+  size = 1200 800
+  match:class = ^(foot)$
+  match:title = ^(btop)$
+}
+
 
 # Copyq
-windowrulev2 = float, class:^(com\.github\.hluk\.copyq)$
-windowrulev2 = size 800 800, class:^(com\.github\.hluk\.copyq)$
+windowrule {
+  name = windowrule-6
+  float = on
+  size = 800 800
+  match:class = ^(com\.github\.hluk\.copyq)$
+}
+
 
 # Steam games
-windowrule = fullscreen, class:steam_app_default
+windowrule {
+  name = windowrule-7
+  fullscreen = on
+  match:class = steam_app_default
+}
+
 # }}}1
 
