hyprpaper: migrate config format

--- a/configs/hypr/.config/hypr/hyprpaper.conf
+++ b/configs/hypr/.config/hypr/hyprpaper.conf
@@ -3,8 +3,12 @@ $mon2 = eDP-1
 $wallpaper1 = ~/Pictures/Wallpapers/flowers-19.jpg
 $wallpaper2 = ~/Pictures/Wallpapers/storm.jpg 
 
-preload = $wallpaper1
-preload = $wallpaper2
+wallpaper {
+    monitor = $mon1
+    path = $wallpaper1
+}
 
-wallpaper = $mon1, $wallpaper1
-wallpaper = $mon2, $wallpaper2
+wallpaper {
+    monitor = $mon2
+    path = $wallpaper2
+}
