hyprland: swap browsers

--- a/configs/hypr/.config/hypr/hyprland.conf
+++ b/configs/hypr/.config/hypr/hyprland.conf
@@ -157,11 +157,11 @@ $focusScript = ~/.config/hypr/focus.sh
 
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod, W, exec, firefox -p 'Default User'
+bind = $mainMod, W, exec, brave
 bind = $mainMod, Y, exec, keepassxc
 bind = $mainMod, O, exec, obsidian
 
-bind = $mainMod SHIFT, W, exec, zen-browser
+bind = $mainMod SHIFT, W, exec, chromium
 bind = $mainMod, B, exec, gtk-launch ferdium
 
 bind = $mainMod, X, exec, $terminal -T 'Ncmpcpp' -e sh -c 'sleep 0.05 && ncmpcpp'
