hyprland: autostart fixes

--- a/configs/hypr/.config/hypr/hyprland.conf
+++ b/configs/hypr/.config/hypr/hyprland.conf
@@ -136,16 +136,16 @@ device {
 # }}}1
 
 # AUTOSTART {{{1
-exec-once = hyprpaper
-exec-once = waybar
-exec-once = copyq
+exec-once = hyprpaper &
+exec-once = waybar &
+exec-once = copyq &
 exec-once = systemctl --user start hyprpolkitagent
-exec-once = hypridle
-exec-once = mako
+exec-once = hypridle &
+exec-once = mako &
 exec-once = elephant &
 exec-once = nm-applet &
-exec-once = udiskie
-exec-once = hyprpm reload -nn
+exec-once = udiskie &
+exec-once = hyprpm reload -n
 # }}}1
 
 # KEYBINDS {{{1
