hyprland: disable hyprpm notifications

--- a/configs/hypr/.config/hypr/hyprland.conf
+++ b/configs/hypr/.config/hypr/hyprland.conf
@@ -145,7 +145,7 @@ exec-once = mako &
 exec-once = elephant &
 exec-once = nm-applet &
 exec-once = udiskie &
-exec-once = hyprpm reload -n
+exec-once = hyprpm reload
 # }}}1
 
 # KEYBINDS {{{1
