hyprland: Replace ncmpcpp with Rmpc

--- a/configs/hypr/.config/hypr/hyprland.conf
+++ b/configs/hypr/.config/hypr/hyprland.conf
@@ -164,7 +164,7 @@ bind = $mainMod, O, exec, obsidian
 bind = $mainMod SHIFT, W, exec, chromium
 bind = $mainMod, B, exec, gtk-launch ferdium
 
-bind = $mainMod, X, exec, $terminal -T 'Ncmpcpp' -e sh -c 'sleep 0.05 && ncmpcpp'
+bind = $mainMod, X, exec, $terminal -T 'Rmpc' -e sh -c 'sleep 0.05 && rmpc'
 bind = $mainMod, apostrophe, exec, mpc toggle
 
 bind = $mainMod, Escape, exec, $terminal -T 'btop' -e btop
@@ -280,9 +280,9 @@ windowrule {
 windowrule {
   name = windowrule-3
   float = on
-  size = 640 480
+  size = 1024 600
   match:class = ^(foot)$
-  match:title = ^(Ncmpcpp)$
+  match:title = ^(Rmpc)$
 }
 
 
