--- a/configs/hypr/.config/hypr/hyprland.conf
+++ b/configs/hypr/.config/hypr/hyprland.conf
@@ -115,7 +115,7 @@ input {
     kb_layout = us,ru,ua
     kb_variant =
     kb_model =
-    kb_options = grp:win_space_toggle
+    kb_options = grp:win_space_toggle,caps:escape
     kb_rules =
     repeat_rate = 75
     repeat_delay = 300
