--- a/configs/mise/.config/mise/config.toml
+++ b/configs/mise/.config/mise/config.toml
@@ -7,6 +7,7 @@ node = "22.15.0"
 pnpm = "10.26.2"
 usage = "latest"
 uv = "0.9.2"
+zig = "0.15.2"
 
 [settings]
 idiomatic_version_file_enable_tools = ["node"]
