--- a/configs/mise/.config/mise/config.toml
+++ b/configs/mise/.config/mise/config.toml
@@ -6,6 +6,7 @@ gleam = "1.12.0"
 go = "1.25.6"
 node = "22.15.0"
 pnpm = "10.26.2"
+tree-sitter = "0.26.3"
 usage = "latest"
 uv = "0.9.2"
 zig = "0.15.2"
