noctalia: pin nm applet

--- a/configs/noctalia/.config/noctalia/settings.json
+++ b/configs/noctalia/.config/noctalia/settings.json
@@ -138,7 +138,8 @@
                     "hidePassive": false,
                     "id": "Tray",
                     "pinned": [
-                        "Ferdium"
+                        "Ferdium",
+                        "nm-applet"
                     ]
                 },
                 {
