--- a/configs/yazi/.config/yazi/keymap.toml
+++ b/configs/yazi/.config/yazi/keymap.toml
@@ -17,3 +17,28 @@ desc = "Create a tab and enter the hovered directory"
 [[mgr.prepend_keymap]]
 on  = "y"
 run = [ 'shell -- for path in %s; do echo "file://$path"; done | wl-copy -t text/uri-list', "yank" ]
+
+[[mgr.prepend_keymap]]
+on = [ "M", "m" ]
+run = "plugin gvfs -- select-then-mount --jump"
+desc = "Select device to mount and jump to its mount point"
+
+[[mgr.prepend_keymap]]
+on = [ "M", "u" ]
+run = "plugin gvfs -- select-then-unmount"
+desc = "Select device then unmount"
+
+[[mgr.prepend_keymap]]
+on = [ "M", "a" ] 
+run = "plugin gvfs -- add-mount"
+desc = "Add a GVFS mount URI"
+
+[[mgr.prepend_keymap]]
+on = [ "M", "e" ]
+run = "plugin gvfs -- edit-mount"
+desc = "Edit a GVFS mount URI"
+
+[[mgr.prepend_keymap]]
+on = [ "M", "r" ]
+run = "plugin gvfs -- remove-mount"
+desc = "Remove a GVFS mount URI"
