niri+noctalia: configure clipboard picker

--- a/configs/noctalia/.config/noctalia/settings.json
+++ b/configs/noctalia/.config/noctalia/settings.json
@@ -5,14 +5,14 @@
         "customLaunchPrefix": "",
         "customLaunchPrefixEnabled": false,
         "enableClipPreview": true,
-        "enableClipboardHistory": false,
+        "enableClipboardHistory": true,
         "enableSettingsSearch": true,
         "iconMode": "tabler",
         "ignoreMouseInput": false,
         "pinnedApps": [
         ],
         "position": "center",
-        "screenshotAnnotationTool": "",
+        "screenshotAnnotationTool": "satty -f -",
         "showCategories": true,
         "showIconBackground": true,
         "sortByMostUsed": true,
